# proga

./: README.md  greeting.txt  mergesort.py  proga.docx  sort.c
lab2/: Laba 8-4.py  Laba8 -2 .random.py  Laba8-1.py  Laba8-3.py  Laba8-5.py  Laba8-6 random.py  Laba8-7.py  Laba8-8.py  Proga6.c
laba 11/: ex1.c  ex2.c  ex3.c
laba10/: Laba-100.c  Makefile  date.c  function.h  main.c
laba12/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
laba2/: ttsk4.c  ttsk5.c
laba2.1/: pro1.c
laba3/: ttsk10.c  ttsk11.c  ttsk12.c  ttsk6.c  ttsk7.c  ttsk8.c  ttsk9.c
laba4/: ttsk13.c  ttsk14.c  ttsk15.c
laba5/: prog1.c  ttsk16.c  ttsk17.c  ttsk18.c  ttsk19.c
laba6/: ttsk21.c  tttsk20.c
laba7/: Laba7-5.c  ttsk22.c  ttsk23.c  ttsk24.c  ttsk25.c
laba8/: Laba8-111.c  ttsk26.c
laba9/: Laba99.c  ttsk27.c  ttsk28.c
semester_2/: README.md  laba1.c  laba2.c  laba4.1.c  laba4.c  laba5.c  proga4.c  proga5.c
semester_2/RGR/: CMakeLists.txt  RGR.c  main.c  matrix.h  test_matrix.c
semester_2/laba6/: main.1.c  sorting.c  student.h  student.h.c
semester_2/laba7/: laba7.md  proga7.c
semester_2/laba8/: CMakeLists.txt  matrix_test8.h  proga8_func.c  proga8_main.c  test8.c
term_2/: pr2.c  proga4.1.c
С shporgalka /: dynamic memory
